gccida/g0/expand_end_case_type
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5721:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5723:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5727:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5728:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5729:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5730:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5732:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5734:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5739:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5741:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5744:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5763:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wider_mode; // [rsp+84h] [rbp-6Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5824:17: error: expected expression
if ( *( _OWORD *)&n->low->block.vars < *( _OWORD *)&minval->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5824:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&n->low->block.vars < *( _OWORD *)&minval->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5824:51: error: expected expression
if ( *( _OWORD *)&n->low->block.vars < *( _OWORD *)&minval->block.vars ) 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5824:43: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&n->low->block.vars < *( _OWORD *)&minval->block.vars ) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5826:17: error: expected expression
if ( *( _OWORD *)&maxval->block.vars < *( _OWORD *)&n->high->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5826:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&maxval->block.vars < *( _OWORD *)&n->high->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/stmt.c:5826:51: error: expected expression
if ( *( _OWORD *)&maxval->block.vars < *( _OWORD *)&n->high->block.vars ) 
                                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_case_type/src/obj/stmt.o] Error 1
